# app/Http/Controllers/PlantController.php
@@ -24,25 +24,6 @@ class PlantController extends Controller
     */
 
    /** 
-    * @OA\Get(
-    *     path="/api/plants",
-    *     summary="Get all Plants",
-    *     description="Displays all the plants",
-    *     tags={"Plants"},
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation, Returns a list of Plants in JSON format"
-    *       ),
-    *      @OA\Response(
-    *          response=401,
-    *          description="Unauthenticated",
-    *      ),
-    *      @OA\Response(
-    *          response=403,
-    *          description="Forbidden"
-    *      )
-    * )
-    *
     * Display a listing of the resource.
     * 
     * The user sends a get request though the URL. 
@@ -66,36 +47,6 @@ class PlantController extends Controller
     */
 
     /**
-    * @OA\Post(
-    *      path="/api/plants",
-    *      operationId="store",
-    *      tags={"Plants"},
-    *      summary="Create a new Plant",
-    *      description="Stores the plant in the DB",
-    *      security={{"bearerAuth":{}}},
-    *      @OA\RequestBody(
-    *         required=true,
-    *         @OA\JsonContent(
-    *            required={"name", "breed", "image", "info", "season", "hight","likes","provider_id"},
-    *            @OA\Property(property="name", type="string", format="string", example="hibiscus"),
-    *            @OA\Property(property="breed", type="string", format="string", example="malvaceae"),
-    *            @OA\Property(property="image", type="string", format="string", example="https://xyz.com"),
-    *            @OA\Property(property="info", type="string", format="string", example="the hibiscus is a wonderful plant"),
-    *            @OA\Property(property="season", type="string", enum={"summer", "fall", "winter", "spring"}, default="summer"),
-    *            @OA\Property(property="hight", type="integer", format="integer", example="1"),
-    *            @OA\Property(property="likes", type="integer", format="integer", example="1"),
-    *            @OA\Property(property="provider_id", type="number", example="1")
-    *          )
-    *      ),
-    *     @OA\Response(
-    *          response=200, description="Success",
-    *          @OA\JsonContent(
-    *             @OA\Property(property="status", type="integer", example=""),
-    *             @OA\Property(property="data",type="object")
-    *          )
-    *      )
-    * )
-    *
     * Store a newly created resource in the plant table.
     * The user sends a post request though the URL. 
     * Using the route defined in the API.php it calls the store function in the plant controller. 
@@ -116,33 +67,6 @@ class PlantController extends Controller
     }
 
     /**
-    * @OA\Get(
-    *     path="/api/plants/{id}",
-    *     summary="Get Plant by ID",
-    *     description="Gets a plant by ID",
-    *     tags={"Plants"},
-    *          @OA\Parameter(
-    *          name="id",
-    *          description="Plant id",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *              type="integer")
-    *          ),
-    *      @OA\Response(
-    *          response=200,
-    *          description="Successful operation"
-    *       ),
-    *      @OA\Response(
-    *          response=401,
-    *          description="Unauthenticated",
-    *      ),
-    *      @OA\Response(
-    *          response=403,
-    *          description="Forbidden"
-    *      )
-    * )
-    * 
     * Display the specified resource. 
     * The user send a get request and the endpoint being the plant id. 
     * The route in the api.php calls the plant controller and the show function 
@@ -158,45 +82,6 @@ class PlantController extends Controller
         return new PlantResource($plant);
     }
     /**
-    * @OA\Put(
-    *      path="/api/plants",
-    *      operationId="update",
-    *      tags={"Plants"},
-    *      summary="Update a Plant",
-    *      description="Stores the plant in the DB",
-    *      security={{"bearerAuth":{}}},
-    *         @OA\Parameter(
-    *          name="id",
-    *          description="Plant id",
-    *          required=true,
-    *          in="path",
-    *          @OA\Schema(
-    *          type="integer")
-    *          ),
-    *      @OA\RequestBody(
-    *         required=true,
-    *         @OA\JsonContent(
-    *            required={"id","name", "breed", "image", "info", "season", "hight","likes", "provider_id"},
-    *            @OA\Property(property="id", type="number" example="1"),
-    *            @OA\Property(property="name", type="string", format="string", example="hibiscus"),
-    *            @OA\Property(property="breed", type="string", format="string", example="malvaceae"),
-    *            @OA\Property(property="image", type="string", format="string", example="https://xyz.com"),
-    *            @OA\Property(property="info", type="string", format="string", example="the hibiscus is a wonderful plant"),
-    *            @OA\Property(property="season", type="string", enum={"summer", "fall", "winter", "spring"}, default="summer"),
-    *            @OA\Property(property="hight", type="integer", format="integer", example="1"),
-    *            @OA\Property(property="likes", type="integer", format="integer", example="1"),
-    *            @OA\Property(property="provider", type="string", format="string", example="ThePlant.inc"),
-    *          )
-    *      ),
-    *     @OA\Response(
-    *          response=200, description="Success",
-    *          @OA\JsonContent(
-    *             @OA\Property(property="status", type="integer", example=""),
-    *             @OA\Property(property="data",type="object")
-    *          )
-    *      )
-    * )
-    * 
     * Update the specified resource in the plant table.
     * The user sends a put request though the URL. This gets request will display all the plants in the plant table. 
     * Using the route defined in the API.php it calls the update function in the plant controller. 
@@ -219,29 +104,6 @@ class PlantController extends Controller
     }
 
      /**
-     * @OA\Delete(
-     *    path="/api/plants/{id}",
-     *    operationId="destroy",
-     *    tags={"Plants"},
-     *    summary="Delete a Plant",
-     *    description="Delete Plant",
-     *    security={{"bearerAuth":{}}},
-     *    @OA\Parameter(name="id", in="path", description="Id of a Plant", required=true,
-     *        @OA\Schema(type="integer")
-     *    ),
-     *    @OA\Response(
-     *         response=204,
-     *         description="Success",
-     *         @OA\JsonContent(
-     *         @OA\Property(property="status_code", type="integer", example="204"),
-     *         @OA\Property(property="data",type="object")
-     *          )
-     *       )
-     *    )
-     * )
-     *  
-     * Remove the specified resource from the plants table.
-     *
      * @param  \App\Models\Plant  $plant
      * @return \Illuminate\Http\Response
      */
